[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["doris"]

[project]
name = "doris"
version = "0.0.1"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
maintainers = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
description = "minimal dashboard engine"
keywords = ["dashboard"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "flask-cors",
    "htpy",
    "mccole",
    "polars",
    "ruff",
]

[tool.mccole]
skips = ["templates"]

[tool.mccole.renames]
"CODE_OF_CONDUCT.md" = "code_of_conduct.md"
"CONTRIBUTING.md" = "contributing.md"
"LICENSE.md" = "license.md"
"README.md" = "index.md"
